--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
-    "less": "^4.1.3",
+    "less": "^4.2.0",
     "less-loader": "^11.1.3",
+    "sass": "^1.64.2",
     "vite": "^4.4.5",
     "vuex": "^4.1.0"
   }
