--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
+    "@vicons/fluent": "^0.12.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
