完善了工作台和路由

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "sass": "^1.64.2",
+    "seemly": "^0.3.6",
     "vite": "^4.4.5",
     "vuex": "^4.1.0"
   }
